--- a/README
+++ b/README
@@ -85,6 +85,19 @@ catmac:catjscanvas cat$ git push origin master
 catmac:catjscanvas cat$ git add .
 catmac:catjscanvas cat$ git commit -m "demo32.html pan and zoom working"
 catmac:catjscanvas cat$ git push origin master
+--CRAP need to clone from github in the catjstuts dir
+[cat@gator1209 ~]$ cd public_html/catjstuts/   
+[cat@gator1209 ~/public_html/catjstuts]$ ls
+cgi-bin
+[cat@gator1209 ~/public_html/catjstuts]$ git clone git@github.com:christrees/catjscanvas.git
+Initialized empty Git repository in /home/cat/public_html/catjstuts/catjscanvas/.git/
+Enter passphrase for key '/home/cat/.ssh/id_rsa': 
+remote: Counting objects: 42, done.
+remote: Compressing objects: 100% (33/33), done.
+remote: Total 42 (delta 16), reused 35 (delta 9)
+Receiving objects: 100% (42/42), 260.41 KiB, done.
+Resolving deltas: 100% (16/16), done.
+[cat@gator1209 ~/public_html/catjstuts]$ 
 [cat@gator1209 ~/public_html/catjstuts/catjscanvas]$ git fetch
 [cat@gator1209 ~/public_html/catjstuts/catjscanvas]$ git reset --hard HEAD
 [cat@gator1209 ~/public_html/catjstuts/catjscanvas]$ git merge origin/master
